updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently an Executive Assistant at a high schol district. I am the mother of a 21 year old son who attends UCSD and is a Mechanical Engineering major.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Bakersfield, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Kickboxing, teaching group fitness</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be to work from home as a web developer and be a personal trainer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Bakersfield, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want a job that keeps me interested and is always evolving, that lets me be creative and technical at the same time</p>
     </section>
 
     <footer id="footer">
